# ecs-files-composer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  README.rst  dev.Dockerfile  docker-compose.override.yaml  docker-compose.yaml  ecs-config-input.json  ecs-files-input.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.cicd/: build_images.yml  buildspec.yml  buildspec_docs.yml  codebuild_docs.template  codebuild_release.yml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: Makefile  certificates.rst  commands.rst  conf.py  ecs_config_composer.rst  examples.rst  features.rst  index.rst  input.rst  installation.rst  jinja2_functions_filters.rst  make.bat  modules.rst  usage.rst
docs/examples/: basic_compose.rst  basic_raw.rst  s3_compose.rst  secrets_compose.rst  ssm_compose.rst
ecs_config_composer/: cli.py  ecs_config_composer.py  input.py
ecs_files_composer/: __init__.py  aws_mgmt.py  certbot_aws_store.py  certificates_mgmt.py  chmod.py  cli.py  common.py  ecs_files_composer.py  envsubst.py  files_mgmt.py  input.py
ecs_files_composer/jinja2_filters/: __init__.py  aws_filters.py
ecs_files_composer/jinja2_functions/: __init__.py  aws.py  aws_tools.py
examples/: kafka-connect.config.yaml  kafka-connect.yaml  nginx.config.yaml
tests/: RAW_CONTENT.txt  __init__.py  test_ecs_config_composer.py  test_ecs_metadata.py
